[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/HUD/ShotButton.png" type="Texture" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.36041
margin_right = -1.36041

[node name="MoveButtons" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MoveLeft" type="Button" parent="Control/MoveButtons"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="MoveRight" type="Button" parent="Control/MoveButtons"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="ShotBtn" type="Button" parent="Control"]
margin_left = 815.0
margin_top = 435.0
margin_right = 938.0
margin_bottom = 509.0
icon = ExtResource( 2 )
flat = true
